--- a/ekheketi/kibana/kibana-basic-auth-secret.yaml
+++ b/ekheketi/kibana/kibana-basic-auth-secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  auth: dXNlcjE6JGFwcjEkT1FzT2pvT2wkTTVpeG5LakppSTNqd3VZZ3RNbkFuMAo=
+  auth: ********
 kind: Secret
 metadata:
   name: kibana-basic-auth
